test/fail/bin_punc01.v3
//@parse
class bin_punc01 {
	var c: int = 0b0.0110;
	var d: int = 0b0.1111.0101;
	var e: int = 0b01.0101.0100.1111;
	var f: int = 0b1111.1111.1111.1111;
	var g: int = 0b1111.0000.1111.0000.1111.0000.1111.0000;
}
